# azure-function-actixweb

./: .gitignore  Cargo.toml  sales_order_report.xlsx
src/: main.rs
src/api/: apis.rs
src/model/: models.rs
src/service/: services.rs
