[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# warp = "0.3"
# tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
actix-web = "4"
env_logger = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
validator = {version ="0.18", features = ["derive"]}
chrono = "0.4.38"